# ssb-project-template-stat

./: .gitignore  .ssb_project_root  .ssb_project_root.toml  CODEOWNERS  LICENSE.md  README.md  SECURITY.md  backstage.yaml  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
src/functions/: fizzbuzz.py
src/notebooks/: 00_imports.ipynb
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  LICENSE  README.md  SECURITY.md  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/config/: README.md  config.py
{{cookiecutter.project_name}}/experimental/: README.md
{{cookiecutter.project_name}}/src/: pyproject.toml
{{cookiecutter.project_name}}/src/functions/: fizzbuzz.py
{{cookiecutter.project_name}}/src/notebooks/: 00_imports.ipynb  imports.py
{{cookiecutter.project_name}}/src/{{packages_prefix}}_functions/: delete_me.py
{{cookiecutter.project_name}}/tests/: test_fizzbuzz.py
{{cookiecutter.project_name}}/{{packages_prefix}}_config/: config.py  settings.toml
