[tool.poetry]
name = "replace_me"
version = "0.0.0"
description = "Template for starting dapla python projects"
authors = ["replace_me <replace_me@ssb.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
dapla-toolbelt = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
