[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf >=3.2",
    "ipykernel >=6.29",
    "pyarrow >=23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3",
    "pytest-cov>=5.0.0",
    "black[jupyter]>=25.11.0",
    "isort>=5.12.0",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
]

[tool.poetry]
requires-poetry = ">=2.2"
# To include functions in Jupyter Notebooks from other parts of the directory tree,
# without using ProjectRoot from ssb-fagfunksjoner.
packages = [
    { include = "config" },
    { include = "functions", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
skip_gitignore = true
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector"
cell_metadata_filter = "-papermill,tags"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
